--- a/pom.xml
+++ b/pom.xml
@@ -152,7 +152,18 @@
           <artifactId>taglist-maven-plugin</artifactId>
           <version>2.4</version>
         </plugin>
-
+               
+         <plugin>
+          <groupId>org.apache.tomcat.maven</groupId>
+          <artifactId>tomcat7-maven-plugin</artifactId>
+          <version>2.2</version>
+          <configuration>
+          <url>http://​3.16.215.114:8080​/manager/text</url>
+          <server>TomcatServer</server>
+          <path>/WebApps</path>
+          </configuration>
+         </plugin>
+               
         <plugin>
           <groupId>org.mortbay.jetty</groupId>
           <artifactId>jetty-maven-plugin</artifactId>
