--- a/pom.xml
+++ b/pom.xml
@@ -154,11 +154,13 @@
         </plugin>
                
          <plugin>
-          <groupId>org.apache.tomcat.maven</groupId>
-          <artifactId>tomcat7-maven-plugin</artifactId>
-          <version>2.2</version>
+          <dependency>
+           <groupId>org.apache.tomcat.maven</groupId>
+           <artifactId>tomcat8-maven-plugin</artifactId>
+           <version>3.0-r1756463</version>
+           </dependency>
           <configuration>
-          <url>http://​3.16.215.114:8080​/manager/text</url>
+          <url>http://3.16.215.114:8080/manager/</url>
           <server>TomcatServer</server>
           <path>/WebApps</path>
           </configuration>
