--- a/pom.xml
+++ b/pom.xml
@@ -153,18 +153,15 @@
           <version>2.4</version>
         </plugin>
                
-         <plugin>
-          <dependency>
-           <groupId>org.apache.tomcat.maven</groupId>
-           <artifactId>tomcat8-maven-plugin</artifactId>
-           <version>3.0-r1756463</version>
-           </dependency>
-          <configuration>
-          <url>http://3.16.215.114:8080/manager/</url>
-          <server>TomcatServer</server>
-          <path>/WebApps</path>
-          </configuration>
-         </plugin>
+ <plugin>
+    <groupId>org.apache.tomcat.maven</groupId>
+    <artifactId>tomcat7-maven-plugin</artifactId>
+    <version>2.2</version>
+    <configuration>
+        <url>http://3.16.215.114:8080/manager/text</url>
+        <server>TomcatServery</server>
+    </configuration>
+</plugin>
                
         <plugin>
           <groupId>org.mortbay.jetty</groupId>
