--- a/pom.xml
+++ b/pom.xml
@@ -156,12 +156,14 @@
  <plugin>
     <groupId>org.apache.tomcat.maven</groupId>
     <artifactId>tomcat7-maven-plugin</artifactId>
-    <version>2.2</version>
+    <version>2.0</version>
     <configuration>
-        <url>http://3.16.215.114:8080/manager/text</url>
-        <server>TomcatServery</server>
+        <url>http://ec2-3-16-215-114.us-east-2.compute.amazonaws.com:8080/manager/text</url>
+        <server>TomcatServer</server>
+        <path>/Maven</path>
     </configuration>
 </plugin>
+
                
         <plugin>
           <groupId>org.mortbay.jetty</groupId>
